syntax = "proto3";

package info;

service Info {
  rpc GetInfo (InfoRequest) returns (InfoResponse);
}

message InfoRequest {
}

message InfoResponse {
  InfoData info = 1;
}

message InfoData {
    string bot_name = 1;
    string version = 2;
    string cpu = 3;
    string memory = 4;
    string os = 5;
    string uptime = 6;
    string bot_id = 7;
    string bot_owner = 8;
    string bot_activity = 9;
    string system_total_memory = 10;
    string system_used_memory = 11;
    string system_cpu_usage = 12;
}